--- a/public/index.html
+++ b/public/index.html
@@ -9,11 +9,12 @@
       content="Web site created using create-react-app"
     />
     <!-- google fonts -->
+
     <link
       href="https://fonts.googleapis.com/css2?family=Aldrich&family=Orbitron:wght@400;500;600;700;800;900&family=Rajdhani:wght@300;400;500;600;700&display=swap"
       rel="stylesheet"
     />
-    <title>React App</title>
+    <title>Portfolio-Vishal</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
